[tool.poetry]
name = "tauon"
version = "0.9.3"
description = "Command line argument parser"
homepage = "https://github.com/pcastellazzi/tauon/"
documentation = "https://github.com/pcastellazzi/tauon/"
readme = "README.md"
license = "MIT"

authors = ["Pablo Castellazzi <pablo.castellazzi@icloud.com>"]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pytest-cov = "*"
safety = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
