[tool.poetry]
description = "Command line argument parser"
documentation = "https://github.com/pcastellazzi/tauon/"
homepage = "https://github.com/pcastellazzi/tauon/"
license = "MIT"
name = "tauon"
readme = "README.md"
version = "0.9.3"

authors = ["Pablo Castellazzi <pablo.castellazzi@icloud.com>"]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
safety = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
builtins = ["_"]

[tool.ruff.lint]
ignore = [
    "ANN", # annotations (flake8-annotations)
    "COM", # trailing commas (flake8-commas)
    "D",   # documentation (pydocstyle)
    "INP", # implicity namespaces (flake8-no-pep420)
    "T20", # use of print (flake8-print)

    "E501", # line too long
    "S101", # use of assert

]
select = ["ALL"]
